# crccheck

./: .coveragerc  .gitignore  .hgignore  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml
checksum/: __init__.py  base.py  checksum.py  crc.py  generate.py  table.py
crccheck/: __init__.py  __main__.py  base.py  checksum.py  crc.py
create/: crc_head.py  crctable.py  dl.py
docs/: build.bat
docs/source/: changelog.rst  checksum.rst  conf.py  crccheck.rst  crctable.py  crctable.rst  howto.rst  index.rst  modules.rst
tests/: __init__.py  benchmark.py  test_base.py  test_checksum.py  test_crc.py  test_reflectbitorder.py
