# for the license of this file see LICENSE.txt

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "crccheck"
version = "1.3.0"
authors = [{name = "Martin Scharrer", email = "martin.scharrer@web.de"}]
license = {text = "MIT"}
description = "Calculation library for CRCs and checksums"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MartinScharrer/crccheck"

[tool.setuptools]
packages = ["crccheck"]
include-package-data = false
