# for the license of this file see LICENSE.txt

[metadata]
name = crccheck
version = 1.3.0
author = Martin Scharrer
author_email = martin.scharrer@web.de
license = MIT
description = Calculation library for CRCs and checksums
url = https://github.com/MartinScharrer/crccheck
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Utilities

[options]
packages = crccheck
install_requires =
test_suite = tests
